[package]
name = "bgpkit-broker"
version = "0.7.0-beta.3"
edition = "2021"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/bgpkit-broker"
documentation = "https://docs.rs/bgpkit-broker"
description = """
A library and command-line to provide indexing and searching functionalities for public BGP data archive files over time.
"""
keywords = ["bgp", "bgpkit", "api"]

[[bin]]
path= "src/cli/main.rs"
name="bgpkit-broker"
required-features = ["cli"]

[dependencies]

#############################################
# Core Broker Rust SDK dependencies
#############################################
chrono = { version = "0.4", features = ["serde"] }
log="0.4"
reqwest = {version = "0.11.17", features = ["blocking", "json", "stream"]}
serde={version="1", features = ["derive"]}
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"

#############################################
# Optional dependencies
#############################################

# command-line interface dependencies
clap = {version= "4.3", features=["derive"], optional=true}
dirs = {version="5", optional=true}
humantime = {version="2.1", optional = true}
num_cpus = {version="1.15", optional=true}
tabled = {version = "0.13", optional = true}
tracing-subscriber = {version="0.3", optional=true}
indicatif = { version = "0.17.7", optional = true }
futures-util = { version = "0.3.28", optional = true }
itertools = { version = "0.12.0" , optional = true }
dotenvy = { version = "0.15" , optional = true }
tempfile = { version = "3.8", optional = true }
which = { version = "5.0", optional = true }

# crawler dependencies
futures = {version="0.3", optional = true}
oneio = {version="0.15.1", features = ["lib", "s3"], optional = true}
regex = { version = "1", optional = true }
scraper = { version = "0.17", optional = true }
tokio = {version="1", optional = true, features = ["full"] }
lazy_static = {version="1", optional = true}

# api dependencies
axum = {version = "0.7", optional = true}
tower-http = {version = "0.5", optional = true, features = ["cors"]}
http = {version="1.0", optional = true}
utoipa = {version = "4", optional = true, features = ["axum_extras", "chrono"]}
utoipa-swagger-ui = { version = "5", optional = true, features = ["axum"] }
axum-prometheus = { version = "0.5.0", optional = true }


# database dependencies
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"], optional = true }

[features]
default=[]
cli = [
    # command-line interface
    "clap", "dirs", "humantime", "num_cpus", "tracing-subscriber", "tabled", "itertools", "dotenvy", "tempfile", "which",
    # crawler
    "futures", "oneio", "regex", "scraper", "tokio", "lazy_static",
    # database
    "backend",
    # bootstrap
    "indicatif", "futures-util",
    # API
    "axum", "axum-prometheus", "utoipa", "utoipa-swagger-ui", "http", "tower-http",
]
backend = [
    "tokio", "sqlx",
]

[dev-dependencies]
tracing-subscriber = "0.3.17"
